--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-taskapp-localstorage",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https//gabrielzepeda1.github.io/react-taskapp-localstorage",
+  "homepage": "https://gabrielzepeda1.github.io/react-taskapp-localstorage",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
